--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
 
   <section class="about-me">
     <h2>About Me</h2>
-    <p>Hello! I’m a passionate AI & Data Scientist in training. I enjoy building models, exploring interdisciplinary topics like neuroscience & cryptology, and bridging theory with real-world applications. Always eager to learn and collaborate.</p>
+    <p>
+      I’m a curious and driven AI enthusiast with a strong appetite for interdisciplinary challenges. My academic journey has led me to explore diverse fields—from neuroscience and cryptology to computational mechanics and language models. I enjoy connecting theoretical concepts with applied problems, and I’m particularly drawn to projects that sit at the intersection of multiple domains.
+    </p>
   </section>
 
   <section>
@@ -235,17 +237,17 @@
   <section>
     <h2>Notable Readings</h2>
     <ul class="readings">
-      <li><a href="https://arxiv.org/abs/2305.19927" target="_blank">“A Survey of Transformer Models in NLP”</a></li>
-      <li><a href="https://www.sciencedirect.com/science/article/pii/S0893608023003275" target="_blank">“Deep Learning in Computer Vision: Recent Advances”</a></li>
-      <li><a href="https://www.jmlr.org/papers/v21/19-502.html" target="_blank">“Graph Neural Networks: A Review”</a></li>
-      <li><a href="https://link.springer.com/article/10.1007/s11222-022-10159-3" target="_blank">“Privacy-Preserving Machine Learning Techniques”</a></li>
+      <li><a href="https://arxiv.org/abs/2306.05955" target="_blank">“Path Neural Networks: Expressive and Accurate Graph Neural Networks”</a></li>
+      <li><a href="https://arxiv.org/abs/2411.09499" target="_blank">“Developement of Reinforcement Learning based Optimisation Method for Side-Sill Design”</a></li>
+      <li><a href="http://www.incompleteideas.net/609%20dropbox/other%20readings%20and%20resources/MCTS-survey.pdf" target="_blank">“A Survey of Monte Carlo Tree Search Methods”</a></li>
+      <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7366944/" target="_blank">“Plasticity and attention in the era of digital media”</a></li>
     </ul>
   </section>
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>You can reach me via email: <a href="mailto:ton.email@example.com">ton.email@example.com</a></p>
-    <p>Or connect on <a href="https://www.linkedin.com/in/tonprofil" target="_blank">LinkedIn</a></p>
+    <p>You can reach me via email: <a href="mailto:ton.email@example.com">zait.inesnawel@gmail.com</a></p>
+    <p>Or connect on <a href="https://www.linkedin.com/in/nawel-zait-406950257/" target="_blank">LinkedIn</a></p>
   </section>
 
   <section id="chatbot-container">
@@ -298,7 +300,7 @@
       */
       // demo : après 1s, réponse fixe
       setTimeout(() => {
-        botMsg.textContent = "Bot: Hello! I'm under development.";
+        botMsg.textContent = "Bot: Hi! I'm under development :)";
       }, 1000);
     };
   </script>
