Change card and section colors to #FAFDFF

--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
     .card h3 {
       font-size: 1.15rem;
       font-weight: 600;
-      color: #73baff;
+      color: #FAFDFF;
       margin-bottom: 10px;
     }
     .card p {
       font-size: 0.95rem;
-      color: #c3c9d6;
+      color: #FAFDFF;
       line-height: 1.6;
     }
     .about-me {
       background-color: #0f1624;
-      border-left: 4px solid #3a91ff;
+      border-left: 4px solid #FAFDFF;
       padding: 30px 24px;
       border-radius: 10px;
     }
@@ -112,7 +112,7 @@
     }
     .contact {
       background-color: #10161f;
-      border-left: 4px solid #59aaff;
+      border-left: 4px solid #FAFDFF;
       padding: 30px 24px;
       border-radius: 10px;
       margin-top: 40px;
